refactor: run sonarLint