@@ -19,7 +19,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -66,7 +65,7 @@ public class RafflesQueryServiceImpl implements RafflesQueryService {
 
             List<RafflesResponse.RafflesResponseByGoodsDTO> rafflesResponseByGoodsDTOS = rafflesList.stream()
                     .map(RafflesResponse.RafflesResponseByGoodsDTO::from)
-                    .collect(Collectors.toList());
+                .toList();
 
             return RafflesResponse.RafflesResponseByGoodsListDTO.builder()
                     .rafflesResponseByGoodsList(rafflesResponseByGoodsDTOS)
